# rag-exploration

./: class_10_and_11.ipynb  class_1_to_4.ipynb  class_5_to_9.ipynb  pyproject.toml  readme.MD
.cursor/rules/: learning-project.mdc
